--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #ede0d4;
 }
-.textcenter {
+#header {
   text-align: center;
 }
 
@@ -11,7 +11,6 @@ body {
 }
 #Beskrivelse {
   background-color: #e6ccb2;
-  white-space: nowrap;
   padding-top: 50px;
   padding-bottom: 50px;
   padding-left: 25px;
@@ -19,7 +18,6 @@ body {
 
 #Ingredienser {
   background-color: #ddb892;
-  text-align: justify;
   padding-top: 50px;
   padding-bottom: 50px;
   padding-left: 25px;
@@ -29,9 +27,11 @@ body {
   background-color: #b08968;
   width: 320px;
   padding: 10px;
-  border: 5px solid gray;
+  border: 20px groove #7f5539;
   margin: 0;
 }
+
+/*Nedenunder er diverse fonts til de forskellige punkter på hjemmesiden */
 h1 {
   font-family: "Exo", sans-serif;
 }
@@ -45,6 +45,8 @@ section {
 nav ul {
   list-style-type: none;
 }
+
+/*Forsøg på at justere billedet så det ser pænere ud. */
 img {
   display: block;
   margin-left: auto;
@@ -53,6 +55,5 @@ img {
   height: 600px;
   object-fit: contain;
 }
-.grid-container {
-  display: inline-grid;
-}
+
+/*CSS GRID TEST */
