--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /*Styling på forskellige articles (farve, padding, margin og andre sjove ting som text-align*/
-body,
-html {
+body {
   background-color: #a4c3b2;
   margin: 0;
   height: 100vh;
@@ -42,10 +41,19 @@ footer {
 
 /*Forsøg på at justere billedet */
 img {
+  max-width: 50%;
+  border-radius: 10%;
   display: block;
-  max-width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  opacity: 1;
+  border-style: ridge;
+}
+
+img:hover {
+  opacity: 0.75;
 }
 
 /*Nedenunder er diverse fonts til de forskellige elements på hjemmesiden */
@@ -60,7 +68,7 @@ article {
   font-family: "Kanit", sans-serif;
 }
 
-/*CSS GRID - HAR AFPRØVET TO FORSKELLIGE MEDIA QUERIES, MEN KAN IKKE FÅ DEM TIL AT VIRKE*/
+/*CSS GRID - HAR AFPRØVET FORSKELLIGE MEDIA QUERIES, MEN DE ØDELÆGGER BARE SIDENS LAYOUT, SÅ VALGTE AT SLETTE DEM*/
 .container {
   display: grid;
   grid-template-areas:
@@ -69,7 +77,7 @@ article {
     "nav i h"
     "nav f f";
   grid-template-columns: auto;
-  grid-template-rows: 20vh 40vh 40vh 2vh;
+  grid-template-rows: 18vh 40vh 40vh 2vh;
   margin: 0;
 }
 header {
@@ -93,15 +101,4 @@ img {
 }
 footer {
   grid-area: f;
-}
-
-@media (min-width: 600px) {
-  .container {
-    grid-template-columns: 1fr;
-  }
-}
-@media (min-height: 1000px) {
-  .container {
-    grid-template-rows: 1fr;
-  }
 }
